--- a/css/base.css
+++ b/css/base.css
@@ -19,7 +19,7 @@ del,ins,u,s,a,a:hover{text-decoration:none;}
 body,textarea,input,button,select,keygen,legend{font:14px/1.5 "Microsoft Yahei",tahoma,arial,"Hiragino Sans GB",宋体;color:#333333;outline:0;}
 body{background:#f4f4f4;}
 a{color:#333333;}
-a:hover{color:#c2a658;}
+a:hover{color:#e9460b;}
 /* 功能样式 */
 .f-cb:after,.f-cbli li:after{display:block;clear:both;visibility:hidden;height:0;overflow:hidden;content:".";}
 .f-cb,.f-cbli li{zoom:1;}
