--- a/css/common.css
+++ b/css/common.css
@@ -483,6 +483,7 @@
     position: relative;
     vertical-align: middle;
     width: 120px;
+    margin-left: 2px;
 }
 .ui-rate .progressBar{
 	display: block;
