--- a/css/page/detail.css
+++ b/css/page/detail.css
@@ -154,22 +154,29 @@
 .ui-login p.item .red{
 	color: #f15000;
 }
-.ui-login p.item2{
+.ui-login .item2{
 	font-size: 16px;
 	text-align: left;
 	padding-top: 10px;
+	position: relative;
 }
-.ui-login p.item2{
+.ui-login .error{
+	font-size: 12px;
+	color: #f15000;
+	position: absolute;
+	top: 55px;
+}
+.ui-login .item2{
 	position: relative;
 	margin-bottom: 35px;
 }
-.ui-login p.item2 .ui-input{
+.ui-login .item2 .ui-input{
 	height: 20px;
 	padding: 10px 28px 10px 13px;
 	width: 230px;
 	border: 1px solid #e9eaec;
 }
-.ui-login p.item2 span.yuan{
+.ui-login .item2 span.yuan{
 	position: absolute;
 	right: 10px;
     top: 18px;
@@ -297,17 +304,13 @@
 	font-size: 16px;
 }
 .ui-jjfb .item2{
-	text-align: center;
-	margin-bottom: 30px;
-	padding-top: 40px;
-}
-.ui-jjfb p.p1{
 	font-size: 24px;
 	font-weight: bold;
-	color: #454985;
-}
-.ui-jjfb p.p2{
-	color: #999999;
+	text-align: center;
+	height: 75px;
+	line-height: 75px;
+	margin-bottom: 15px;
+	color: #c2c3d2;
 }
 .ui-jjfb p.item a.red{
 	color: #f15000;
@@ -316,33 +319,6 @@
 .ui-jjfb .ui-button{
 	padding: 0px;
 	width: 100%;
-}
-.ui-jjfb .sxsj{
-	color: #999999;
-	text-align: center;
-	font-size: 12px;
-	margin-bottom: 10px;
-}
-
-.ui-jjfb .time{
-	color: #00afeb;
-	line-height: 25px;
-}
-.ui-jjfb .time span{
-	display: inline-block;
-	width: 27px;
-	height: 25px;
-	background-color: #eceff4;
-	text-align: center;
-	line-height: 25px;
-	border-radius: 3px;
-	font-size: 20px;
-	font-family: "Arial";
-	margin-left: 4px;
-	margin-right: 4px;
-}
-.ui-jjfb .time .day{
-	margin-left: 0px;
 }
 
 /* sorry */
